// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Chat /> renders a basic chat 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  padding: 0;
  list-style: none;
  font-family: system-ui,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.25;
}

.c1 {
  position: relative;
  align-self: flex-start;
  padding: 0.5rem;
  border-radius: 0.75rem;
  outline: 0;
  max-inline-size: 60%;
  color: black;
  background-color: gainsboro;
  box-sizing: border-box;
}

.c1+li {
  margin-block-start: 0.5rem;
}

.c1:active time {
  display: block;
}

.c2 {
  display: block;
  quotes: none;
}

<ol
  class="c0"
>
  <li
    class="c1"
  >
    <q
      class="c2"
    >
      O HAI! 👋🏼
    </q>
  </li>
</ol>
`;

exports[`<Chat /> renders a full-featured chat 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  padding: 0;
  list-style: none;
  font-family: system-ui,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.25;
}

.c7 {
  align-self: center;
  margin: 0.5rem 0;
  text-align: center;
  max-inline-size: 80%;
  font-size: 0.75rem;
  font-weight: bold;
  color: gray;
}

.c7 i {
  font-style: normal;
}

.c1 {
  position: relative;
  align-self: flex-start;
  padding: 0.5rem;
  border-radius: 0.75rem;
  outline: 0;
  max-inline-size: 60%;
  color: black;
  background-color: gainsboro;
  box-sizing: border-box;
}

.c1+li {
  margin-block-start: 0.5rem;
}

.c1:active time {
  display: block;
}

.c5 {
  position: relative;
  align-self: flex-end;
  padding: 0.5rem;
  border-radius: 0.75rem;
  outline: 0;
  max-inline-size: 60%;
  color: white;
  background-color: dodgerblue;
  box-sizing: border-box;
}

.c5+li {
  margin-block-start: 0.5rem;
}

.c5:active time {
  display: block;
}

.c8 {
  padding: 0;
  font-size: 4em;
  background-color: transparent;
}

.c2 {
  display: block;
  margin-block-end: 0.25em;
  font-size: 0.75rem;
  font-weight: bold;
}

.c9 {
  display: none;
  margin-block-end: 0.25em;
  font-size: 0.75rem;
  font-weight: bold;
}

.c3 {
  display: block;
  quotes: none;
}

.c4 {
  display: none;
  position: absolute;
  inset-block-start: 100%;
  inset-inline: 0.666667em auto;
  margin-block-start: 0.25em;
  text-align: start;
  font-size: 0.75rem;
  color: gray;
  opacity: 0.75;
  white-space: nowrap;
}

.c6 {
  display: none;
  position: absolute;
  inset-block-start: 100%;
  inset-inline: auto 0.666667em;
  margin-block-start: 0.25em;
  text-align: end;
  font-size: 0.75rem;
  color: gray;
  opacity: 0.75;
  white-space: nowrap;
}

<ol
  class="c0"
>
  <li
    class="c1"
    tabindex="0"
  >
    <span
      class="c2"
    >
      Costello
    </span>
    <q
      class="c3"
    >
      Look, you gotta first baseman?
    </q>
    <time
      class="c4"
      datetime="1938-03-24"
    >
      03/24/1938
    </time>
  </li>
  <li
    class="c5"
    tabindex="0"
  >
    <span
      class="c2"
    >
      Abbott
    </span>
    <q
      class="c3"
    >
      Certainly.
    </q>
    <time
      class="c6"
      datetime="1938-03-24"
    >
      03/24/1938
    </time>
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <span
      class="c2"
    >
      Costello
    </span>
    <q
      class="c3"
    >
      Who’s playing first?
    </q>
    <time
      class="c4"
      datetime="1938-03-24"
    >
      03/24/1938
    </time>
  </li>
  <li
    class="c5"
    tabindex="0"
  >
    <span
      class="c2"
    >
      Abbott
    </span>
    <q
      class="c3"
    >
      That’s right.
    </q>
    <time
      class="c6"
      datetime="1938-03-24"
    >
      03/24/1938
    </time>
  </li>
  <li
    class="c7"
  >
    Costello becomes exasperated.
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <span
      class="c2"
    >
      Costello
    </span>
    <q
      class="c3"
    >
      When you pay off the first baseman every month, who gets the money?
    </q>
    <time
      class="c4"
      datetime="1938-03-24"
    >
      03/24/1938
    </time>
  </li>
  <li
    class="c5"
    tabindex="0"
  >
    <span
      class="c2"
    >
      Abbott
    </span>
    <q
      class="c3"
    >
      Every dollar of it.
    </q>
    <time
      class="c6"
      datetime="1938-03-24"
    >
      03/24/1938
    </time>
  </li>
  <li
    class="c5 c8"
    tabindex="0"
  >
    <span
      class="c9"
      hidden=""
    >
      Abbott
    </span>
    <q
      class="c3"
    >
      😁
    </q>
    <time
      class="c6"
      datetime="1938-03-24"
    >
      03/24/1938
    </time>
  </li>
  <li
    class="c5 c8"
  >
    <span
      class="c9"
      hidden=""
    >
      Costello
    </span>
    <q
      class="c3"
    >
      😒
    </q>
  </li>
</ol>
`;
